--- a/docker_container/Dockerfile.focalfoxyNWH
+++ b/docker_container/Dockerfile.focalfoxyNWH
@@ -90,7 +90,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y tshark
 
-RUN pip3 install -U pip setuptools 
+RUN pip3 install -U pip setuptools==58.2.0
 RUN pip3 install roslibpy
 
 
@@ -99,6 +99,8 @@ COPY warehouse_interfaces/ /home/ros2_ws/src/warehouse_interfaces/
 COPY ansible/ /home/ansible/
 
 COPY heartbeat/ /home/ros2_ws/src/heartbeat/
+
+COPY robot_spawner_pkg/ /home/ros2_ws/src/robot_spawner_pkg/
 
 RUN cd $ROS2_WS \
     && . /opt/ros/foxy/setup.sh \
