--- a/docker_container/Dockerfile.focalfoxyNWH
+++ b/docker_container/Dockerfile.focalfoxyNWH
@@ -106,3 +106,14 @@ RUN cd $ROS2_WS \
     && . /opt/ros/foxy/setup.sh \
     && colcon build \
     && . $ROS2_WS/install/setup.sh
+
+#################### my add commands ##################
+RUN . /opt/ros/foxy/setup.sh && \
+    sudo apt-get update && \
+    sudo apt-get install -y ros-foxy-gazebo-ros
+
+RUN sudo apt-get install -y ros-foxy-turtlebot3-gazebo
+
+RUN sudo apt install ros-foxy-tf-transformations 
+
+RUN sudo pip3 install transforms3d 
