--- a/one_ap_three_stas.yaml
+++ b/one_ap_three_stas.yaml
@@ -2,28 +2,28 @@ gazebo_models:
 - robot0
 - robot1
 - robot2
-- ap_0
+- control
 
 ip_list:
 - 10.0.0.2
 - 10.0.0.3
 - 10.0.0.4
-- 10.0.0.0
+- 10.0.0.5
 pose:
 - position:
-    x: 10
+    x: 1
     y: 0
     z: 0
 - position:
     x: -1
-    y: 1
+    y: 10
     z: 0
 - position:
     x: -1
     y: -1
     z: 0
 - position:
-    x: 0
+    x: 1
     y: 0
     z: 0
 
@@ -32,13 +32,13 @@ type:
 - MOBILE
 - MOBILE
 - MOBILE
-- STATIC
+- MOBILE
 
 
 image:
 - "cornet:focalfoxyNWH"
 
-robot_number: 3
+robot_number: 4
 robot_model: "burger"
 spawn_robots: True # If set to False only the robot state publisher is launched
 robot_information:
@@ -46,15 +46,19 @@ robot_information:
     - "robot0"
     - "robot1"
     - "robot2"
+    - "control"
   robot_pos_x:
-    - 10.0
+    - 1.0
     - -1.0
     - -1.0
+    - 1.0
   robot_pos_y:
     - 0.0
     - 1.0
     - -1.0
+    - 0.0
   robot_pos_z:
+    - 0.0
     - 0.0
     - 0.0
     - 0.0
@@ -62,6 +66,7 @@ robot_information:
     - 10.0.0.2
     - 10.0.0.3
     - 10.0.0.4
+    - 10.0.0.5
 
 access_points: 1
 static_information:
